--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 FLASK_APP=stonks_inventory
 FLASK_ENV=development
 SECRET_KEY=phlumbus
-DEPLOY_DATABASE_URL=postgresql+psycopg2://postgres:1997Nov03@127.0.0.1:5432/transaction
+DEPLOY_DATABASE_URL=postgresql+psycopg2://postgres:PWD@127.0.0.1:5432/transaction
